Add fonts. Fix export to pdf. Fix tests. Add delete buttons and fix deleting in services. Fix tests.